# ARM64-Assembly-Emulator

./: CMakeLists.txt  README.md  parser.cpp  parser.hpp
Testing Output/: test1Output.txt  test2Output.txt  test3Output.txt  test4Output.txt  test5Output.txt
include/: executor.hpp  parser.hpp  registers.hpp  stack.hpp
src/: executor.cpp  executor_main.cpp  main.cpp  parser.cpp  parser_main.cpp  registers.cpp  registers_main.cpp  stack.cpp  stack_main.cpp
tests/: 32bitTest.s  parserTest.s  task5_emulatorTest.s
